# serious-http-library

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt
examples/src/: 00_http_v1_server.cpp
include/sl/: http.hpp  template.hpp
include/sl/http/: v1.hpp
include/sl/http/v1/: message.hpp  parser.h  serializer.h  v1_parser.h  v1_serializer.h
test/: CMakeLists.txt
test/src/: parser_test.cpp
